Styles for login :)

--- a/index.html
+++ b/index.html
@@ -14,31 +14,42 @@
           <div class="form-image">
             <img src="./src/img/logo.png" alt="logo formulario" />
           </div>
-          <div class="form-comtrol">
+          <div class="form-control">
             <input type="email" placeholder="Correo" />
           </div>
-          <div class="form-comtrol">
+          <div class="form-control">
             <input type="password" placeholder="Contraseña" />
           </div>
           <div class="form-control">
-            <button type="submit">Login</button>
+            <button type="submit">Iniciar sesión</button>
           </div>
-          <div class="form-control-types">
+          <div class="form-control">
+            <div class="show-more-types">
+              Mostrar más métodos de inicio de sesión
+            </div>
+          </div>
+          <div class="form-control-types hidden">
             <div>
-              <button type="submit">
-                <span class="icon-google"></span>
+              <button type="submit" class="google">
+                <span class="icon-google">
+                  <i class="fab fa-google"></i>
+                </span>
                 Iniciar sesión con Google
               </button>
             </div>
             <div>
-              <button type="submit">
-                <span class="icon-facebook"></span>
+              <button type="submit" class="facebook">
+                <span class="icon-facebook">
+                  <i class="fab fa-facebook-square"></i>
+                </span>
                 Iniciar sesión con Facebook
               </button>
             </div>
             <div>
-              <button type="submit">
-                <span class="icon-twitter"></span>
+              <button type="submit" class="twitter">
+                <span class="icon-twitter">
+                  <i class="fab fa-twitter-square"></i>
+                </span>
                 Iniciar sesión con Twiter
               </button>
             </div>
