--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
             <button type="submit">Iniciar sesión</button>
           </div>
           <div class="form-control">
-            <div class="show-more-types">
-              Mostrar más métodos de inicio de sesión
+            <div class="show-more-types" id="js_show-more-options">
+              Mostrar métodos de inicio de sesión
             </div>
           </div>
-          <div class="form-control-types hidden">
+          <div class="form-control-types hidden" id="js_options-login">
             <div>
               <button type="submit" class="google">
                 <span class="icon-google">
@@ -70,6 +70,7 @@
       crossorigin="anonymous"
     ></script>
     <!-- my own script -->
+    <script src="./src/js/controller/controller.js"></script>
     <script src="./src/js/app.js"></script>
   </body>
 </html>
