Animation inputs form

--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
           </div>
           <div class="form-control">
             <input type="email" placeholder="Correo" />
+            <label for="" class="animation-input"></label>
           </div>
           <div class="form-control">
             <input type="password" placeholder="Contraseña" />
+            <label for="" class="animation-input"></label>
           </div>
           <div class="form-control">
             <button type="submit">Iniciar sesión</button>
