--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           </div>
           <div class="form-control-types hidden" id="js_options-login">
             <div>
-              <button type="submit" class="google">
+              <button type="submit" class="google" id="js_google">
                 <span class="icon-google">
                   <i class="fab fa-google"></i>
                 </span>
@@ -40,7 +40,7 @@
               </button>
             </div>
             <div>
-              <button type="submit" class="facebook">
+              <button type="submit" class="facebook" id="js_facebook">
                 <span class="icon-facebook">
                   <i class="fab fa-facebook-square"></i>
                 </span>
@@ -48,7 +48,7 @@
               </button>
             </div>
             <div>
-              <button type="submit" class="twitter">
+              <button type="submit" class="twitter" id="js_twitter">
                 <span class="icon-twitter">
                   <i class="fab fa-twitter-square"></i>
                 </span>
@@ -66,13 +66,20 @@
       </section>
     </div>
 
+    <!-- FIREBASE SDK -->
+    <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-app.js"></script>
+    <!-- Add Firebase products that you want to use -->
+    <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-auth.js"></script>
     <!-- script for fontawesome -->
     <script
       src="https://kit.fontawesome.com/b7301c403c.js"
       crossorigin="anonymous"
     ></script>
     <!-- my own script -->
-    <script src="./src/js/controller/controller.js"></script>
+    <script src="./src/js/config/configFirebase.js"></script>
     <script src="./src/js/app.js"></script>
+    <script src="./src/js/auth/auth.js"></script>
+    <script src="./src/js/controller/controller.js"></script>
   </body>
 </html>
